[metadata]
name = nctalk
version = 0.0.1
description = Client library for Nextcloud Talk
long_description = file: README.md
url: https://github.com/toxick/nctalk
classifiers =
    Development Status :: 1 - Planning
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
test_suite = tests/

install_requires =
    xmltodict
    nextcloud
 
[options.packages.find]
exclude =
    tests
    dist
    build

[pycodestyle]
    max-line-length = 95

[flake8]
    exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg,node_modules,*venv*
    # select = X,X,X
    # ignore = X,X,X
    max-line-length = 95
    # hang-closing = true
    count = true
    showpep8 = false
    show-source = false
    statistics = true
    # max-complexity

[pydocstyle]
